--- a/app/src/main/res/menu/exam_popmenu.xml
+++ b/app/src/main/res/menu/exam_popmenu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@+id/top1"
-        android:title="隐藏非本周课程"/>
+    <item android:id="@+id/exam_top1"
+        android:title="合并考试安排"/>
 
 </menu>
