feat:隐藏过期的考试安排

--- a/app/src/main/res/menu/exam_popmenu.xml
+++ b/app/src/main/res/menu/exam_popmenu.xml
@@ -4,4 +4,7 @@
     <item android:id="@+id/exam_top1"
         android:title="合并考试安排"/>
 
+    <item android:id="@+id/exam_top2"
+        android:title="隐藏过期的考试安排"/>
+
 </menu>
