--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2ABFFD</color>
-    <color name="colorPrimaryDark">#2ABFFD</color>
+    <color name="colorPrimaryDark">@color/colorPrimary</color>
     <color name="colorAccent">#03DAC5</color>
 
     <color name="tab_checked">#2ABFFD</color>
