--- a/app/src/main/res/layout/detail_cardview.xml
+++ b/app/src/main/res/layout/detail_cardview.xml
@@ -29,6 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:layout_marginBottom="6dp"
                 android:textColor="#000000"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"/>
@@ -37,7 +38,6 @@
                 android:id="@+id/card_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
                 android:layout_marginLeft="5dp" />
 
             <TextView
