--- a/app/src/main/res/layout/activity_cet.xml
+++ b/app/src/main/res/layout/activity_cet.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/more_head"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
@@ -16,7 +15,7 @@
         tools:layout_editor_absoluteX="109dp">
 
         <ImageView
-            android:id="@+id/exam_back"
+            android:id="@+id/CET_back"
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:tint="@color/app_white"
@@ -26,48 +25,49 @@
             android:src="@drawable/back" />
 
         <TextView
+            android:id="@+id/CET_title"
             android:layout_width="wrap_content"
             android:textSize="20dp"
-            android:text="考试安排"
+            android:text="CET"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_marginTop="30px"
             android:layout_marginLeft="130px"
+            app:layout_constraintStart_toStartOf="@id/CET_back"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/exam_state"
+            android:id="@+id/CET_state"
             android:layout_width="wrap_content"
             android:textSize="20dp"
             android:text="正在更新"
             android:textColor="@color/app_white"
             android:layout_height="wrap_content"
             android:layout_marginTop="30px"
-            android:layout_marginLeft="420px"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="300px"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/exam_more"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/attribute"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/CET_more"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_marginRight="15dp"-->
+<!--            android:src="@drawable/attribute"/>-->
 
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/exam_not_find"
+        android:id="@+id/CET_not_find"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="没有查询到符合条件的考试安排信息!"
+        android:text="没有查询到等级考试成绩信息!"
         android:textSize="25dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/exam_info_recycler_view"
+        android:id="@+id/CET_info_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
