--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -60,6 +60,7 @@
                         android:layout_height="90dp"
                         android:layout_centerHorizontal="true"
                         android:layout_weight="1"
+                        app:tint="@color/colorPrimary"
                         android:baselineAlignBottom="false"
                         android:src="@drawable/more_kaoshianpai" />
 
@@ -101,8 +102,9 @@
                         android:layout_height="90dp"
                         android:layout_centerHorizontal="true"
                         android:layout_weight="1"
+                        app:tint="@color/colorPrimary"
                         android:baselineAlignBottom="false"
-                        android:src="@drawable/more_chengji" />
+                        android:src="@drawable/cet" />
 
                     <TextView
                         android:id="@+id/more_card_text2"
@@ -112,11 +114,12 @@
                         android:layout_centerInParent="true"
                         android:layout_weight="1"
                         android:textSize="18dp"
-                        android:text="成绩查询" />
+                        android:text="CET成绩" />
 
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
 
         <LinearLayout
@@ -126,43 +129,82 @@
             android:orientation="horizontal" >
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/more_item_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="10dp"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp">
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
-                    <ImageView
-                        android:id="@+id/more_card_image3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:layout_centerHorizontal="true"
-                        android:layout_weight="1"
-                        android:baselineAlignBottom="false"
-                        android:src="@drawable/more_fenshu" />
-
-                    <TextView
-                        android:id="@+id/more_card_text3"
+                    <RelativeLayout
+                        android:id="@+id/more_item_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/more_card_image3"
-                        android:layout_centerInParent="true"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:textSize="18dp"
-                        android:text="学分绩查询" />
+                        android:orientation="vertical" >
 
-                </RelativeLayout>
+                        <ImageView
+                            android:id="@+id/more_card_image3"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_weight="1"
+                            app:tint="@color/colorPrimary"
+                            android:baselineAlignBottom="false"
+                            android:src="@drawable/more_chengji" />
+
+                        <TextView
+                            android:id="@+id/more_card_text3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/more_card_image3"
+                            android:layout_centerInParent="true"
+                            android:layout_weight="1"
+                            android:textSize="18dp"
+                            android:text="考试成绩" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/more_item_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/more_card_image4"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_weight="1"
+                            app:tint="@color/colorPrimary"
+                            android:baselineAlignBottom="false"
+                            android:src="@drawable/lab" />
+
+                        <TextView
+                            android:id="@+id/more_card_text4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/more_card_image4"
+                            android:layout_centerInParent="true"
+                            android:layout_weight="1"
+                            android:textSize="18dp"
+                            android:text="实验成绩" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
