--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -104,7 +104,7 @@
                         android:layout_weight="1"
                         app:tint="@color/colorPrimary"
                         android:baselineAlignBottom="false"
-                        android:src="@drawable/cet" />
+                        android:src="@drawable/more_cet" />
 
                     <TextView
                         android:id="@+id/more_card_text2"
