设置 (基本功能未完成)

--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -25,6 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/person_setting"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
