--- a/app/src/main/res/values/entries_list_preference.xml
+++ b/app/src/main/res/values/entries_list_preference.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="day_entities">
-        <item>DAY1</item>
-        <item>DAY2</item>
-        <item>DAY3</item>
-        <item>DAY4</item>
+        <item>1天</item>
+        <item>3天</item>
+        <item>7天</item>
+        <item>30天</item>
     </string-array>
     <string-array name="day_values">
-        <item>第一天</item>
-        <item>第二天</item>
-        <item>第三天</item>
-        <item>第四天</item>
+        <item>1天</item>
+        <item>3天</item>
+        <item>7天</item>
+        <item>30天</item>
     </string-array>
 </resources>
