--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteX="109dp">
 
         <ImageView
-            android:id="@+id/exam_back"
+            android:id="@+id/setting_back"
             android:layout_width="25dp"
             android:layout_height="25dp"
             app:tint="@color/app_white"
@@ -34,17 +34,6 @@
             android:layout_marginLeft="130px"
             app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <TextView
-            android:id="@+id/exam_state"
-            android:layout_width="wrap_content"
-            android:textSize="20dp"
-            android:text="正在设置"
-            android:textColor="@color/app_white"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30px"
-            android:layout_marginLeft="420px"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />-->
     </RelativeLayout>
 
 
