feat:点击"去登录"跳转到第四页

--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/day_class_test"
+            android:id="@+id/day_class_hint"
             android:layout_width="wrap_content"
             android:textSize="20dp"
             android:textColor="@color/app_white"
