feat:隐藏其它学期成绩功能

--- a/app/src/main/res/layout/activity_examscore.xml
+++ b/app/src/main/res/layout/activity_examscore.xml
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/examscore_more"
+            android:id="@+id/exam_score_more"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
