--- a/app/src/main/res/layout/examscore_cardview.xml
+++ b/app/src/main/res/layout/examscore_cardview.xml
@@ -9,9 +9,19 @@
         android:layout_height="0.5dp"
         android:background="@color/colorPrimary" />
 
+    <TextView
+        android:id="@+id/header_term"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimary"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+         android:background="@color/app_white"
         android:orientation="horizontal">
 
         <TextView
